# MF-System

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  main.spec  pyproject.toml  requirements.txt
.github/workflows/: sync.yaml
devices/: gantry.py  gripper.py
devices/pump_lib/qmixsdk/: qmixdigio.py
images/: Thumbs.db
src/: hardware.py  main.py  state_machine.py  state_machine_boundary_con.py  state_machine_dispense.py  state_machine_measure.py  state_machine_visualized.py  utils.py
src/database/: sample_config.json
src/devices/: arduino.py  dls.py  pump.py  utils.py  uv_vis.py
src/devices/arduino/: arduino.ino
src/devices/pump_lib/PumpConfig/: datalogger.xml  nemesys.xml  qmixio.xml  qmixv.xml
src/devices/pump_lib/qmixsdk/: qmixcontroller.py  qmixmotion.py  qmixvalve.py
src/hardware/: hardware.py
src/hardware/devices/: dls.py  pump.py
src/hardware/devices/pump_lib/PumpConfig/: device_properties.xml  scriptingsystem.xml
src/hardware/devices/pump_lib/qmixsdk/: qmixanalogio.py  qmixbus.py
src/logic/: controller.py  state_machine.py  state_machine_boundary_con.py  state_machine_dispense.py  state_machine_measure.py  state_machine_visualized.py
src/mf_system/: main.py
src/mf_system/database/: pump_config.yaml  sample_config.json
src/mf_system/hardware/: hardware.py
src/mf_system/hardware/devices/: arduino.py  dls.py  gantry.py  interface.py  pump.py  utils.py  uv_vis.py
src/mf_system/logic/: controller.py  new_sm.py  state_machine.py  state_machine_boundary_con.py  state_machine_dispense.py  state_machine_measure.py  state_machine_visualized.py  utils.py
src/mf_system/ui/: main_ui.py
src/ui/: main_ui.py
tests/: state_machine_test.py  test.ipynb  test.py  test_arduino.py  test_dls.py  test_hardware.py  test_pump.py  test_state_machine.py
(+8 files in other folders)
