[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mf-system"
version = "0.1.0"
description = "A package contains all the entities for lab automation"
authors = [{ name = "Haoran Yu", email = "haoran.yu@kit.edu" }]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "requests==2.32.3",
    "numpy==1.26.4",
    "atomicwrites==1.4.1",
    "attrs==25.1.0",
    "build==1.2.2.post1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "cleo==2.1.0",
    "colorama==0.4.6",
    "crashtest==0.4.1",
    "distlib==0.3.9",
    "dulwich==0.22.7",
    "fastjsonschema==2.21.1",
    "filelock==3.17.0",
    "idna==3.10",
    "iniconfig==2.0.0",
    "installer==0.7.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.0.1",
    "jaraco.functools==4.1.0",
    "keyring==25.6.0",
    "more-itertools==10.6.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pkginfo==1.12.0",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "py==1.11.0",
    "pyproject_hooks==1.2.0",
    "PyQt6==6.8.1",
    "PyQt6-Qt6==6.8.2",
    "PyQt6_sip==13.10.0",
    "pyserial==3.5",
    "pytest==6.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pywin32-ctypes==0.2.3",
    "PyYAML==6.0.2",
    "RapidFuzz==3.12.1",
    "requests-toolbelt==1.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "toml==0.10.2",
    "tomlkit==0.13.2",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "transitions==0.9.2",
    "transitions-gui==0.9.0",
    "trove-classifiers==2025.1.15.22",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "virtualenv==20.29.1",
]

    
[tool.setuptools]
packages = ["hardware", "logic", "ui"]
package-dir = {"" = "src"}




